Preventing stripes from overflowingg

--- a/frontend/styles/Profile.module.scss
+++ b/frontend/styles/Profile.module.scss
@@ -175,7 +175,7 @@
     &:not(:last-child)::after {
         content: '';
         position: absolute;
-        top: 100%;
+        bottom: 0;
         left: 0;
         height: 2px;
         width: 100%;
